Fix PODCAT-296 issue: Search Catalog- View Toggle and Export Not Centered

--- a/src/pages/searchCatalogPage/ExportButton/ExportButton.css
+++ b/src/pages/searchCatalogPage/ExportButton/ExportButton.css
@@ -11,6 +11,7 @@
   text-align: right;
   color: white;
   padding: 10px 0px 10px 200px;
+  margin-top: -3px;
   text-transform: uppercase;
   display: flex;
   -webkit-box-pack: center;
