--- a/src/pages/searchCatalogPage/SwitchView/SwitchView.css
+++ b/src/pages/searchCatalogPage/SwitchView/SwitchView.css
@@ -4,7 +4,7 @@
   font-family: Inter;
   font-size: 13px;
   font-weight: 500;
-  padding: .5rem 1rem 1.2rem 0;
+  padding: .5rem 1rem 0.8rem 0;
 }
 
 .switch-view-content .nav-link.active {
